crates/mecojoni-core/tests/fixtures/invalid/missing-module.meco
---
meco: 1
---

# greeting
- Hello.
